Added brief bio

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <h1>Hello, ChickTech!</h1>
     <h2>A Webpage By Kristie Ulloa</h2>
 
+    <p>I am currently in 12th grade but I'm close to graduating from PHS and going to Texas A&M.</p>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
