Added new color

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <p>I am currently in 12th grade but I'm close to graduating from PHS and going to Texas A&M.</p>
 
-    <p style = "color: #40E0D0;">This is my favorite color: turquoise!</p>
+    <p style = "color:Turquoise;">This is my favorite color: turquoise!</p>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
