--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <h1>Hello, ChickTech!</h1>
     <h2>A Webpage By Kristie Ulloa</h2>
 
+    <h1>Facts About Me</h1>
+
     <p>I am currently in 12th grade but I'm close to graduating from PHS and going to Texas A&M.</p>
 
     <p style = "color:Turquoise;">This is my favorite color: turquoise!</p>
