--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 
     <h1>Facts About Me</h1>
 
-    <p>I am currently in 12th grade but I'm close to graduating from PHS and going to Texas A&M.</p>
-
-    <p style = "color:Turquoise;">This is my favorite color: turquoise!</p>
+    <ul>
+      <li>I am currently in 12th grade but I'm close to graduating from PHS and going to Texas A&M.</li>
+      <li style = "color:Turquoise;">This is my favorite color: turquoise!</li>
+    </ul>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
