Added new list item and photo

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <ul>
       <li>I am currently in 12th grade but I'm close to graduating from PHS and going to Texas A&M.</li>
       <li style = "color:Turquoise;">This is my favorite color: turquoise!</li>
+      <li>Here is the show I'm looking forward to the most.</li>
+      <img src = "101_Dalmatian_Street_Poster" width = "104" height = "142">
     </ul>
 
     <!-- Optional JavaScript -->
