--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li style = "color:Turquoise;">This is my favorite color: turquoise!</li>
       <li>Here is the show I'm looking forward to the most.</li>
       <img src = "101_Dalmatian_Street_Poster.jpg" width = "200" height = "250">
+      <li style = "background-color: mediumvioletred;">I'm kinda crazy once you get to know me.</li>
     </ul>
 
     <!-- Optional JavaScript -->
