--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <li style = "background-color: mediumvioletred;">I'm kinda crazy once you get to know me.</li>
     </ul>
 
+    <h1>Future Plans</h1>
+    <p>I'll admit, when I got into computer science, I was confident that I would go into video game design because I thought up of several ideas for video games. After taking part in several activites, I have decided that I might have more job choices in mind.</p>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
