--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <li>I am currently in 12th grade but I'm close to graduating from PHS and going to Texas A&M.</li>
       <li>I want to major computer science when I get to A&M.</li>
       <li style = "color:Turquoise;">This is my favorite color: turquoise!</li>
-      <li>Here is the show I'm looking forward to the most.</li>
+      <li>Here is the show I'm looking forward to the most:</li>
       <img src = "101_Dalmatian_Street_Poster.jpg" width = "200" height = "250">
       <li style = "background-color: mediumvioletred;">I'm kinda crazy once you get to know me.</li>
     </ul>
 
     <h1>Future Plans</h1>
-    <p>I'll admit, when I got into computer science, I was confident that I would go into video game design because I thought up of several ideas for video games. After taking part in several activites, I have decided that I might have more job choices in mind.</p>
+    <p>I'll admit, when I got into computer science, I was confident that I would go into video game design because I thought up of several ideas for video games. After taking part in several activites, I have decided that I might have more job choices in mind:</p>
 
     <ul>
       <li>Software Designer</li>
