changed background color

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, ChickTech!</h1>
-    <h2>A Webpage By Kristie Ulloa</h2>
+    <h1 style = "background-color: mediumspringgreen;">Hello, ChickTech!</h1>
+    <h2 style = "background-color: mediumspringgreen;">A Webpage By Kristie Ulloa</h2>
 
     <h1>Facts About Me</h1>
 
@@ -25,7 +25,7 @@
       <li style = "background-color: mediumvioletred;">I'm kinda crazy once you get to know me.</li>
     </ul>
 
-    <h1>Future Plans</h1>
+    <h1 style = "background-color: mediumspringgreen;">Future Plans</h1>
     <p>I'll admit, when I got into computer science, I was confident that I would go into video game design because I thought up of several ideas for video games. After taking part in several activites, I have decided that I might have more job choices in mind:</p>
 
     <ul>
