Added a new sentence and picture

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       <li>Cybersecurity Analyst</li>
       <li>App Designer</li>
     </ul>
+
+    <p>At one point, I considered establishing a technology entertainment studio at this company: </p>
+    <img scr = "L9BkIGz_" width = "200" height = "250">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
